Fixes alignment for answer view

--- a/src/less/dashboard.less
+++ b/src/less/dashboard.less
@@ -17,7 +17,7 @@
 }
 
 // Users
-.users-list {
+.users-list, .choices {
   list-style: none;
   margin: 10px 0;
 }
